test/spec_vectors/ref/fail/module_8.wat
(module (func $func-local-invalid (local (ref null 1))))